adapter created for showing data in list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SPH</string>
+    <string name="year_text">Year</string>
+    <string name="volume_text">Volume</string>
+
 </resources>
